--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -219,9 +219,10 @@ body {
   background-image: linear-gradient(-90deg, #E51D44 0%, #F24F3E 70%);
   border-radius: 8px;
   font-size: 18px;
-  padding: 10px 130px !important;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  width: 335px;
   color: #FFFFFF;
-  width: auto !important;
   margin: 0 auto;
 }
 .btn_red:active {
@@ -231,9 +232,10 @@ body {
   background: #E69898;
   border-radius: 8px;
   font-size: 18px;
-  padding: 10px 130px !important;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  width: 335px;
   color: #FFFFFF;
-  width: auto !important;
   margin: 0 auto;
 }
 .btn_red_gray:active {
@@ -821,6 +823,11 @@ button {
     }
   }
 }
+.df_left {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
 .syt_dd {
   background-color: #FFFFFF;
   margin-top: 7px;
@@ -900,6 +907,9 @@ button {
   color: #C62323;
   letter-spacing: 0.04px;
   text-align: right;
+}
+.font_color_red {
+  color: #C62323;
 }
 .bank_center {
   margin-left: 10px;
@@ -1070,4 +1080,11 @@ button {
 }
 .font_color_222 {
   color: #222222 !important;
+}
+.otherList img {
+  width: 22px;
+  height: 22px;
+}
+.otherList label {
+  margin-left: 12px;
 }
