--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -238,8 +238,7 @@ body {
     padding-top: 10px !important;
     padding-bottom: 10px !important;
     width: 335px;
-    color: @white;
-    // width: auto !important;
+    color: @white; // width: auto !important;
     margin: 0 auto;
 }
 
@@ -711,12 +710,12 @@ button {
     text-align: center;
     img {
         margin-top: 51px;
-        width: 171px;
+        width: 100px;
         height: auto;
     }
     p {
         margin-top: 60px;
-        color: @red_F35545;
+        color: @red_C62323;
         font-size: @font-24;
     }
 }
@@ -785,7 +784,10 @@ button {
     margin-top: 15px;
     overflow: hidden;
     .gray_A0A0A0 {
-        margin-top: 17px;
+        // margin-bottom: 17px;
+    }
+    a {
+        font-size: @font-12;
     }
 }
 
@@ -1232,5 +1234,144 @@ button {
     }
     label {
         margin-left: 12px;
+    }
+}
+
+.bankName {
+    font-family: PingFangSC-Medium;
+    font-size: @font-15;
+    color: @black_222;
+    span:nth-child(2) {
+        margin-left: 25px;
+        font-family: PingFangSC-Medium;
+        font-size: @font-15;
+        color: @black_222;
+    }
+}
+
+.card_info {
+    width: auto;
+    height: 107px;
+    margin: 10px 15px 0;
+    background: #FFFFFF;
+    border-radius: 8px;
+    position: relative;
+    color: #222;
+    font-family: PingFangSC-Regular;
+    .card_text {
+        width: 100%;
+        height: 38px;
+        line-height: 22px;
+        position: relative;
+        top: 12px;
+        padding-top: 2px;
+        padding-left: 58px;
+        color: #222;
+        h3 {
+            font-size: 15px;
+            letter-spacing: 0.05px;
+        }
+        p {
+            font-size: 13px;
+            letter-spacing: 0.04px;
+        }
+    }
+    .gh_bank::before {
+        content: '';
+        background: url('../../images/gongshangyinhang.png') no-repeat;
+        background-size: 100% 100%;
+        position: absolute;
+        top: -11px;
+        left: 0;
+        width: 36px;
+        height: 36px;
+        margin: 11px;
+    }
+    .js_bank::before {
+        content: '';
+        background: url('../../images/jiansheyinhang2x.png') no-repeat;
+        background-size: 100% 100%;
+        position: absolute;
+        top: -11px;
+        left: 0;
+        width: 36px;
+        height: 36px;
+        margin: 11px;
+    }
+    .bj_bank::before {
+        content: '';
+        background: url('../../images/beijingyinhang2x.png') no-repeat;
+        background-size: 100% 100%;
+        position: absolute;
+        top: -11px;
+        left: 0;
+        width: 36px;
+        height: 36px;
+        margin: 11px;
+    }
+    .cardh {
+        font-size: 15px;
+        letter-spacing: 0.05px;
+        position: absolute;
+        right: 14.5px;
+        bottom: 13px;
+        z-index: 9999;
+    }
+}
+
+.card_gh::after {
+    content: '';
+    background: url('../../images/gongshang@2x.png') no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 123px;
+    height: 107px;
+}
+
+.bank_panle {
+    width: auto;
+    height: 124.5px;
+    margin: 10px 15px;
+    background: #FFF;
+    border-radius: 8px;
+    border: 1px solid #DEDEDF;
+    color: #222;
+    .bank_title {
+        line-height: 28.5px;
+        font-size: 12px;
+        color: #FFF;
+        padding-left: 8.5px;
+        background: #4C585C;
+        border-radius: 7px 7px 0 0;
+    }
+    .bank_xe {
+        padding: 18px 11.5px 0 15.5px;
+        font-size: 15px;
+        color: #343434;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.btn-group {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    padding: 0 10px;
+    .d_btn {
+        width: 100%;
+        font-size: 16px;
+        display: block;
+        margin-top: 7px;
+        line-height: 48px;
+        height: 48px;
+        background: #FFF;
+        border: none;
+    }
+    .d_btn:first-child {
+        color: #E51E43;
     }
 }
