--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -215,12 +215,18 @@ body {
   width: 25px;
   height: 25px;
 }
+btn:enabled:active,
+button.mui-active:enabled,
+button:enabled:active {
+  color: #fff;
+  background-color: #E69898 !important;
+}
 .btn_red {
-  background-image: linear-gradient(-90deg, #E51D44 0%, #F24F3E 70%);
+  background: #C62323;
   border-radius: 8px;
   font-size: 18px;
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
   width: 335px;
   color: #FFFFFF;
   margin: 0 auto;
@@ -232,14 +238,14 @@ body {
   background: #E69898;
   border-radius: 8px;
   font-size: 18px;
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
   width: 335px;
   color: #FFFFFF;
   margin: 0 auto;
 }
 .btn_red_gray:active {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .btn_gray {
   background-image: linear-gradient(-90deg, #b7aaaa 0%, #c7c0c0 70%);
