--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -215,12 +215,20 @@ body {
     height: 25px;
 }
 
+btn:enabled:active,
+button.mui-active:enabled,
+button:enabled:active {
+    color: #fff;
+    background-color: #E69898 !important;
+}
+
 .btn_red {
-    background-image: linear-gradient(-90deg, #E51D44 0%, #F24F3E 70%);
+    // background-image: linear-gradient(-90deg, #E51D44 0%, #F24F3E 70%);
+    background: @red_C62323;
     border-radius: 8px;
     font-size: 18px; // padding: 10px 130px !important;
-    padding-top: 10px !important;
-    padding-bottom: 10px !important;
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
     width: 335px;
     color: @white; // width: auto !important;
     margin: 0 auto;
@@ -235,15 +243,15 @@ body {
     background: #E69898;
     border-radius: 8px;
     font-size: 18px; // padding: 10px 130px !important;
-    padding-top: 10px !important;
-    padding-bottom: 10px !important;
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
     width: 335px;
     color: @white; // width: auto !important;
     margin: 0 auto;
 }
 
 .btn_red_gray:active {
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .btn_gray {
