--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -829,6 +829,18 @@ button {
     }
   }
 }
+.mui-segmented-control.mui-segmented-control-inverted ~ .mui-slider-progress-bar {
+  background-color: #C62323;
+}
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
+  color: #C62323;
+  border-bottom: 2px solid #007aff;
+  background: 0 0;
+}
+.mui-slider .mui-segmented-control.mui-segmented-control-inverted ~ .mui-slider-group .mui-slider-item {
+  border-top: 0;
+  border-bottom: 0;
+}
 .df_left {
   display: flex;
   align-items: center;
@@ -1227,4 +1239,37 @@ button {
 }
 .btn-group .d_btn:first-child {
   color: #E51E43;
+}
+.jiaoyijilu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.jiaoyijilu .item_lf {
+  display: flex;
+}
+.jiaoyijilu .item_lf img {
+  width: 38px !important;
+  height: 38px !important;
+}
+.jiaoyijilu .item_lf div {
+  margin-left: 20px;
+}
+.jiaoyijilu .item_lf div span:nth-child(1) {
+  display: inline-block;
+  width: 100%;
+  font-family: PingFangSC-Regular;
+  font-size: 16px;
+  color: #222222;
+}
+.jiaoyijilu .item_lf div span:nth-child(2) {
+  font-family: PingFangSC-Regular;
+  font-size: 14px;
+  color: #888888;
+}
+.jiaoyijilu .item_rt {
+  margin-right: 15px;
+  font-family: PingFangSC-Medium;
+  font-size: 20px;
+  color: #222222;
 }
