--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -846,6 +846,18 @@ button {
   align-items: center;
   justify-content: flex-start;
 }
+.text_color_gray {
+  font-family: PingFangSC-Regular;
+  font-size: 15px;
+  color: #A0A0A0 !important;
+  letter-spacing: 0.05px;
+}
+.text_color_gray_20 {
+  font-family: PingFangSC-Regular;
+  font-size: 15px;
+  color: #202020 !important;
+  letter-spacing: 0.05px;
+}
 .syt_dd {
   background-color: #FFFFFF;
   margin-top: 7px;
@@ -1272,4 +1284,54 @@ button {
   font-family: PingFangSC-Medium;
   font-size: 20px;
   color: #222222;
+}
+.showMoney {
+  background: #FFFFFF;
+  padding: 0 4%;
+  padding-top: 13px;
+}
+.showMoney_top {
+  font-family: PingFangSC-Regular;
+  font-size: 15px;
+  color: #222222;
+  letter-spacing: 0.05px;
+}
+.showMoney_bot {
+  display: flex;
+  align-items: center;
+}
+.showMoney_bot img {
+  width: 34px;
+  height: 45px;
+}
+.showMoney_bot input {
+  font-family: PingFangSC-Regular;
+  font-size: 50px;
+  color: #202020;
+  letter-spacing: 0.2px;
+}
+.rightRooket {
+  color: #575757;
+  font-size: 30px;
+}
+.quanbutixian {
+  margin: 0 4%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #E9E9E9;
+  height: 43px;
+  margin-top: 33px;
+}
+.quanbutixian span:nth-child(1) {
+  font-family: PingFangSC-Regular;
+  font-size: 14px;
+  color: #E98989;
+  letter-spacing: 0.04px;
+}
+.quanbutixian span:nth-child(2) {
+  font-family: PingFangSC-Medium;
+  font-size: 15px;
+  color: #C62323;
+  letter-spacing: 0.05px;
 }
