--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -634,6 +634,7 @@ button {
         font-size: @font-12;
         color: #001111;
         vertical-align: middle;
+        margin-left: 5px;
     }
 }
 
@@ -1222,6 +1223,7 @@ button {
         font-family: PingFangSC-Medium;
         font-size: @font-15;
         color: #333333;
+        line-height: 1;
     }
     input {
         width: 64%;
