--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -566,6 +566,7 @@ button {
   font-size: 12px;
   color: #001111;
   vertical-align: middle;
+  margin-left: 5px;
 }
 .black_title {
   font-size: 15px;
@@ -1076,6 +1077,7 @@ button {
   font-family: PingFangSC-Medium;
   font-size: 15px;
   color: #333333;
+  line-height: 1;
 }
 .bankno input {
   width: 64%;
