--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -227,9 +227,9 @@ button:enabled:active {
   font-size: 18px;
   padding-top: 12px !important;
   padding-bottom: 12px !important;
-  width: 335px;
   color: #FFFFFF;
-  margin: 0 auto;
+  margin: 4% auto;
+  width: 92%;
 }
 .btn_red:active {
   opacity: 0.7;
@@ -240,9 +240,9 @@ button:enabled:active {
   font-size: 18px;
   padding-top: 12px !important;
   padding-bottom: 12px !important;
-  width: 335px;
   color: #FFFFFF;
-  margin: 0 auto;
+  margin: 4% auto;
+  width: 92%;
 }
 .btn_red_gray:active {
   opacity: 0.8;
@@ -830,6 +830,66 @@ button {
     }
   }
 }
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-min-device-pixel-ratio: 2) {
+  .mui-scroll-wrapper {
+    padding-top: 0;
+  }
+  .mui-content {
+    padding-top: 0;
+  }
+  header {
+    height: 64px;
+    padding-top: 24px;
+    box-sizing: content-box;
+    box-shadow: 0 1px 6px #ccc;
+    border: 1px solid #D7D7D7;
+  }
+  .mui-content {
+    padding-top: 88px;
+  }
+  body {
+    /* padding-bottom: 34px; */
+  }
+  /* 密码框 */
+  .alert-password {
+    padding-bottom: 34px !important;
+    box-sizing: content-box;
+  }
+  .mui-bar-tab {
+    padding-bottom: 34px;
+  }
+  /* iframe */
+  #sytframe {
+    bottom: 34px !important;
+  }
+  /* 协议 */
+  .argument.active {
+    top: 44px;
+  }
+  .show-card-info {
+    top: 88px;
+  }
+  /* 滚动区域 */
+  .mui-scroll-wrapper {
+    top: 88px !important;
+  }
+  .mui-scroll-wrapper {
+    padding-top: 0 !important;
+  }
+  .keyboardmove_pup {
+    animation: keyboardmove 0.5s forwards;
+  }
+  @keyframes keyboardmove {
+    from {
+      bottom: -200%;
+      display: none;
+    }
+    to {
+      bottom: 44px;
+      display: block;
+    }
+  }
+}
 .mui-segmented-control.mui-segmented-control-inverted ~ .mui-slider-progress-bar {
   background-color: #C62323;
 }
@@ -1078,6 +1138,8 @@ button {
   font-size: 15px;
   color: #333333;
   line-height: 1;
+  display: inline-block;
+  width: 24%;
 }
 .bankno input {
   width: 64%;
