--- a/style/css/pageStyle.css
+++ b/style/css/pageStyle.css
@@ -1,10 +1,12 @@
 .mui-table-view-cell:after {
   right: 15px;
 }
+
 .mui-table-view:after {
   left: 15px;
   right: 15px;
 }
+
 .zf_menu {
   position: fixed;
   z-index: 20;
@@ -16,6 +18,7 @@
   margin-top: 10px;
   padding-left: 15px;
 }
+
 .zf_menu .zf_title {
   height: 42px;
   line-height: 42px;
@@ -25,6 +28,7 @@
   color: #222222;
   letter-spacing: 0.1px;
 }
+
 .zf_menu .title_info {
   height: 21px;
   line-height: 21px;
@@ -34,6 +38,7 @@
   letter-spacing: 0.05px;
   margin-top: 9px;
 }
+
 .card_info {
   width: auto;
   height: 107px;
@@ -44,6 +49,7 @@
   color: #222;
   font-family: PingFangSC-Regular;
 }
+
 .card_info .card_text {
   width: 100%;
   height: 38px;
@@ -54,14 +60,17 @@
   padding-left: 58px;
   color: #222;
 }
+
 .card_info .card_text h3 {
   font-size: 15px;
   letter-spacing: 0.05px;
 }
+
 .card_info .card_text p {
   font-size: 13px;
   letter-spacing: 0.04px;
 }
+
 .card_info .gh_bank::before {
   content: '';
   background: url('../../images/gongshangyinhang.png') no-repeat;
@@ -73,6 +82,7 @@
   height: 36px;
   margin: 11px;
 }
+
 .card_info .js_bank::before {
   content: '';
   background: url('../../images/jiansheyinhang2x.png') no-repeat;
@@ -84,6 +94,7 @@
   height: 36px;
   margin: 11px;
 }
+
 .card_info .bj_bank::before {
   content: '';
   background: url('../../images/beijingyinhang2x.png') no-repeat;
@@ -95,6 +106,7 @@
   height: 36px;
   margin: 11px;
 }
+
 .card_info .cardh {
   font-size: 15px;
   letter-spacing: 0.05px;
@@ -103,6 +115,7 @@
   bottom: 13px;
   z-index: 9999;
 }
+
 .card_gh::after {
   content: '';
   background: url('../../images/gongshang@2x.png') no-repeat;
@@ -113,6 +126,7 @@
   width: 123px;
   height: 107px;
 }
+
 .card_js::after {
   content: '';
   background: url('../../images/jianshe@2x.png') no-repeat;
@@ -123,6 +137,7 @@
   width: 123px;
   height: 107px;
 }
+
 .card_bj::after {
   content: '';
   background: url('../../images/beijing@2x.png') no-repeat;
@@ -133,6 +148,7 @@
   width: 123px;
   height: 107px;
 }
+
 .bank_panle {
   width: auto;
   height: 124.5px;
@@ -142,6 +158,7 @@
   border: 1px solid #DEDEDF;
   color: #222;
 }
+
 .bank_panle .bank_title {
   line-height: 28.5px;
   font-size: 12px;
@@ -150,6 +167,7 @@
   background: #4C585C;
   border-radius: 7px 7px 0 0;
 }
+
 .bank_panle .bank_xe {
   padding: 18px 11.5px 0 15.5px;
   font-size: 15px;
@@ -157,6 +175,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .btn-group {
   position: absolute;
   bottom: 0;
@@ -164,6 +183,7 @@
   left: 0;
   padding: 0 10px;
 }
+
 .btn-group .d_btn {
   width: 100%;
   font-size: 16px;
@@ -174,9 +194,11 @@
   background: #FFF;
   border: none;
 }
+
 .btn-group .d_btn:first-child {
   color: #E51E43;
 }
+
 .sq_card {
   width: auto;
   text-align: center;
@@ -185,12 +207,14 @@
   color: #B9CBFB;
   letter-spacing: 0.05px;
 }
+
 .add_btn {
   position: absolute;
   bottom: 25px;
   width: 100%;
   padding: 0 54px;
 }
+
 .add_btn .mui-btn {
   width: 100%;
   height: 48px;
@@ -202,11 +226,13 @@
   border-radius: 30px;
   letter-spacing: 0.05px;
 }
+
 .zf_psw {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
 }
+
 .zf_psw li {
   position: relative;
   width: 43.75px;
@@ -215,6 +241,7 @@
   font-size: 15px;
   text-align: center;
 }
+
 .zf_psw li::after {
   position: absolute;
   left: 0;
@@ -227,6 +254,7 @@
   -webkit-transform: scaleY(0.5);
   transform: scaleY(0.5);
 }
+
 .msg_ok {
   position: absolute;
   top: 50%;
@@ -239,17 +267,20 @@
   border-radius: 8px;
   text-align: center;
 }
+
 .msg_ok .msg_icon {
   width: 20px;
   height: 20px;
   margin-top: 11px;
 }
+
 .msg_ok .msg_text {
   font-family: PingFangSC-Regular;
   font-size: 14px;
   color: #fff;
   margin-top: -5px;
 }
+
 .wj_psw {
   float: right;
   height: 16.5;
@@ -260,6 +291,7 @@
   color: #F24F3E;
   letter-spacing: 0.04px;
 }
+
 .syt_title {
   height: 42px;
   line-height: 42px;
@@ -270,9 +302,11 @@
   letter-spacing: 0.1px;
   margin-top: 10px;
 }
+
 .syt_dd {
   margin-top: 22.5px;
 }
+
 .syt_dd .syt1 {
   display: flex;
   justify-content: space-between;
@@ -280,40 +314,49 @@
   line-height: 21px;
   font-family: PingFangSC-Regular;
 }
+
 .syt_dd .syt1 .dd_title {
   font-size: 14px;
   color: #555;
   letter-spacing: 0.05px;
 }
+
 .syt_dd .syt1 .dd_code {
   opacity: 0.89;
   font-size: 14px;
   color: #555555;
   letter-spacing: 0.05px;
 }
+
 .syt_dd .syt1 .zf_title {
   font-size: 15px;
   color: #222;
   letter-spacing: 0.05px;
 }
+
 .syt_dd .syt1 .zf_money {
   font-family: PingFangSC-Semibold;
   font-size: 18px;
   color: #F24F3E;
   letter-spacing: 0.06px;
 }
+
 .syt_dd .syt1:first-child {
   margin-bottom: 11px;
 }
+
 .mt {
   margin-top: 35px;
 }
+
 .mt1 {
   margin-top: 20px;
 }
+
 .bank1 {
   font-family: PingFangSC-Regular;
 }
+
 .bank1 .zg_icon {
   display: inline-block;
   width: 22px;
@@ -324,6 +367,7 @@
   margin-top: 10.5px;
   margin-right: 10.5px;
 }
+
 .bank1 .js_icon {
   display: inline-block;
   width: 22px;
@@ -334,6 +378,7 @@
   margin-top: 10.5px;
   margin-right: 10.5px;
 }
+
 .bank1 .gs_icon {
   display: inline-block;
   width: 22px;
@@ -344,6 +389,7 @@
   margin-top: 10.5px;
   margin-right: 10.5px;
 }
+
 .bank1 .bj_icon {
   display: inline-block;
   width: 22px;
@@ -354,6 +400,7 @@
   margin-top: 10.5px;
   margin-right: 10.5px;
 }
+
 .bank1 .gf_icon {
   display: inline-block;
   width: 22px;
@@ -364,10 +411,12 @@
   margin-top: 10.5px;
   margin-right: 10.5px;
 }
+
 .bank1 .bank_info {
   display: inline-block;
   margin: 3px 0;
 }
+
 .bank1 .bank_info h3 {
   width: auto;
   height: 21px;
@@ -376,6 +425,7 @@
   color: #222222;
   letter-spacing: 0.05px;
 }
+
 .bank1 .bank_info p {
   width: auto;
   height: 16.5px;
@@ -384,6 +434,7 @@
   color: #A0A0A0;
   letter-spacing: 0.04px;
 }
+
 .bank1 .activity1 {
   display: inline-block;
   width: auto;
@@ -396,6 +447,7 @@
   vertical-align: top;
   margin-top: 12px;
 }
+
 .bank1 .activity2 {
   display: inline-block;
   width: auto;
@@ -409,6 +461,7 @@
   vertical-align: top;
   margin-top: 12px;
 }
+
 .bank1 .hook {
   display: inline-block;
   position: absolute;
@@ -417,16 +470,19 @@
   width: 15px;
   height: 15px;
 }
+
 .li_last {
-  padding: 8.5px 0 8.5px 25px!important;
+  padding: 8.5px 0 8.5px 25px !important;
   -webkit-touch-callout: none;
   font-family: PingFangSC-Regular;
 }
+
 .li_last a {
   font-size: 15px;
   color: #555555;
   letter-spacing: 0.05px;
 }
+
 .li_last .qt_info p {
   font-size: 12px;
   letter-spacing: 0.04px;
@@ -434,12 +490,14 @@
   line-height: 16.5px;
   margin: 3px 0;
 }
+
 .ok_btn {
   position: absolute;
-  bottom: 44px!important;
+  bottom: 44px !important;
   width: 100%;
   padding: 0 37.5px;
 }
+
 .ok_btn .mui-btn {
   width: 100%;
   height: 48px;
@@ -451,20 +509,24 @@
   background-image: linear-gradient(-90deg, #E51D44 0%, #F24F3E 70%);
   border-radius: 45.5px;
 }
+
 .mbody {
   text-align: center;
 }
+
 .mbody .zf_icon {
   width: 33px;
   height: 33px;
   margin: 21.5px 0;
 }
+
 .mbody .zf_text {
   line-height: 25px;
   font-family: PingFangSC-Medium;
   font-size: 18px;
   color: #F24F3E;
 }
+
 .mbody .zfje {
   line-height: 28px;
   font-family: PingFangSC-Semibold;
@@ -473,9 +535,11 @@
   letter-spacing: 0.07px;
   margin-top: 8px;
 }
+
 .mbody .info1 {
   margin-top: 33.5px;
 }
+
 .mbody .info1 .style1 {
   display: flex;
   justify-content: space-between;
@@ -485,31 +549,38 @@
   font-size: 15px;
   letter-spacing: 0.05px;
 }
+
 .mbody .info1 .style1 .title {
   color: #555;
 }
+
 .mbody .info1 .style1 .bankCode {
   font-size: 15px;
   color: #222;
 }
+
 .mbody .info1 .style1 .hyMoney {
   color: #F24F3E;
 }
+
 .mbody .info1 .style1:first-child {
   margin-bottom: 8.5px;
 }
+
 .mbody .order {
   position: relative;
   width: auto;
   text-align: center;
   margin-top: 28px;
 }
+
 .mbody .order .txt {
   line-height: 16.5px;
   font-size: 12px;
   color: #A0A0A0;
   letter-spacing: 0.04px;
 }
+
 .mbody .order .txt::before,
 .mbody .order .txt::after {
   background: #eee;
@@ -519,15 +590,19 @@
   top: 50%;
   width: 42%;
 }
+
 .mbody .order .txt::before {
   left: 0;
 }
+
 .mbody .order .txt::after {
   right: 0;
 }
+
 .mbody .imgGroup {
   margin-top: 13px;
 }
+
 .newBank p {
   line-height: 16.5px;
   margin-top: 20.5px;
@@ -579,9 +654,56 @@
     top: 88px !important;
   }
 }
+
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-min-device-pixel-ratio:2) {
+  header {
+    height: 64px;
+    padding-top: 24px;
+    box-sizing: content-box;
+  }
+
+  .mui-content {
+    padding-top: 88px;
+  }
+
+  body {
+    /* padding-bottom: 34px; */
+  }
+
+  /* 密码框 */
+  .alert-password {
+    padding-bottom: 34px !important;
+    box-sizing: content-box;
+  }
+
+  .mui-bar-tab {
+    padding-bottom: 34px;
+  }
+
+  /* iframe */
+  #sytframe {
+    bottom: 34px !important;
+  }
+
+  /* 协议 */
+  .argument.active {
+    top: 44px;
+  }
+
+  .show-card-info {
+    top: 88px;
+  }
+
+  /* 滚动区域 */
+  .mui-scroll-wrapper {
+    top: 88px !important;
+  }
+}
+
 .fill-20 {
   height: 20px;
 }
+
 .header-nav {
   background-color: #FFFFFF;
   color: #000000;
@@ -640,6 +762,7 @@
 .header-nav .confirm span {
   font-size: 0.4rem;
 }
+
 .btn_red {
   background-image: linear-gradient(-90deg, #E51D44 0%, #F24F3E 70%);
   border-radius: 91px;
