--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -1142,7 +1142,7 @@ button {
   width: 24%;
 }
 .bankno input {
-  width: 64%;
+  width: 66%;
   border: 0;
   margin: 0;
   padding: 0;
@@ -1153,7 +1153,7 @@ button {
   line-height: 50px;
 }
 .bankno .bf_icon {
-  margin-left: 15px;
+  margin-right: 15px;
 }
 .line_addbank {
   display: inline-block;
@@ -1163,11 +1163,14 @@ button {
   margin-left: 10px;
   margin-right: 5px;
 }
+.bankInfo {
+  display: flex;
+}
 .bankInfo span:nth-of-type(1) {
   font-family: PingFangSC-Medium;
   font-size: 15px;
   color: #222222;
-  width: 80px;
+  width: 24%;
   display: inline-block;
 }
 .bankInfo span:nth-of-type(2) {
