--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -1290,7 +1290,7 @@ button {
         width: 24%;
     }
     input {
-        width: 64%;
+        width: 66%;
         border: 0;
         margin: 0;
         padding: 0;
@@ -1301,7 +1301,7 @@ button {
         line-height: 50px;
     }
     .bf_icon {
-        margin-left: 15px;
+        margin-right: 15px;
     }
 }
 
@@ -1315,11 +1315,12 @@ button {
 }
 
 .bankInfo {
+    display: flex;
     span:nth-of-type(1) {
         font-family: PingFangSC-Medium;
         font-size: @font-15;
         color: @black_222;
-        width: 80px;
+        width: 24%;
         display: inline-block;
     }
     span:nth-of-type(2) {
