--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -208,7 +208,7 @@ body {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  font-family: 'Arial', Helvetica, Arial, "Microsoft Yahei", sans-serif;
+  font-family: 'PingFangSC-Regular', 'Arial', Helvetica, Arial, "Microsoft Yahei", "Helvetica Neue", sans-serif;
   background-color: #FFFFFF;
 }
 .mui-icon img {
@@ -1166,9 +1166,11 @@ button {
 .bankInfo {
   display: flex;
 }
-.bankInfo span:nth-of-type(1) {
-  font-family: PingFangSC-Medium;
+.bankInfo span {
+  font-family: 'PingFangSC-Medium';
   font-size: 15px;
+}
+.bankInfo span:nth-of-type(1) {
   color: #222222;
   width: 24%;
   display: inline-block;
@@ -1237,39 +1239,6 @@ button {
   font-size: 13px;
   letter-spacing: 0.04px;
 }
-.card_info .gh_bank::before {
-  content: '';
-  background: url('../../images/gongshangyinhang.png') no-repeat;
-  background-size: 100% 100%;
-  position: absolute;
-  top: -11px;
-  left: 0;
-  width: 36px;
-  height: 36px;
-  margin: 11px;
-}
-.card_info .js_bank::before {
-  content: '';
-  background: url('../../images/jiansheyinhang2x.png') no-repeat;
-  background-size: 100% 100%;
-  position: absolute;
-  top: -11px;
-  left: 0;
-  width: 36px;
-  height: 36px;
-  margin: 11px;
-}
-.card_info .bj_bank::before {
-  content: '';
-  background: url('../../images/beijingyinhang2x.png') no-repeat;
-  background-size: 100% 100%;
-  position: absolute;
-  top: -11px;
-  left: 0;
-  width: 36px;
-  height: 36px;
-  margin: 11px;
-}
 .card_info .cardh {
   font-size: 15px;
   letter-spacing: 0.05px;
@@ -1278,15 +1247,23 @@ button {
   bottom: 13px;
   z-index: 9999;
 }
-.card_gh::after {
-  content: '';
-  background: url('../../images/gongshang@2x.png') no-repeat;
-  background-size: 100% 100%;
+.cardItems {
+  overflow: hidden;
+}
+.card_info .BigImg {
+  width: 123px;
+  height: 102%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.card_info .smallImg {
   position: absolute;
   top: 0;
-  right: 0;
-  width: 123px;
-  height: 107px;
+  left: 0;
+  width: 36px;
+  height: 36px;
+  margin: 11px;
 }
 .bank_panle {
   width: auto;
@@ -1559,7 +1536,7 @@ button {
   margin: 11px;
 }
 .mui-input-row label {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'PingFangSC-Medium';
   line-height: 1.1;
   float: left;
   width: 24%;
@@ -1571,4 +1548,6 @@ button {
   margin-bottom: 0;
   padding-left: 0;
   border: 0;
+  font-family: 'PingFangSC-Medium';
+  font-size: 15px;
 }
