--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -1309,9 +1309,9 @@ button {
     display: inline-block;
     width: 1px;
     height: 12px;
-    background-color: #175EC6;
-    margin-left: 10px;
-    margin-right: 5px;
+    background-color: #D7D7D7;
+    margin-left: 6px;
+    margin-right: 9px;
 }
 
 .bankInfo {
@@ -1363,7 +1363,7 @@ button {
     font-size: @font-15;
     color: @black_222;
     span:nth-child(2) {
-        margin-left: 25px;
+        margin-left: 15px;
         font-family: PingFangSC-Medium;
         font-size: @font-15;
         color: @black_222;
@@ -1397,7 +1397,6 @@ button {
             letter-spacing: 0.04px;
         }
     }
-
     .cardh {
         font-size: 15px;
         letter-spacing: 0.05px;
@@ -1407,9 +1406,11 @@ button {
         z-index: 9999;
     }
 }
+
 .cardItems {
     overflow: hidden;
 }
+
 .card_info .BigImg {
     width: 123px;
     height: 102%;
