--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -1159,9 +1159,9 @@ button {
   display: inline-block;
   width: 1px;
   height: 12px;
-  background-color: #175EC6;
-  margin-left: 10px;
-  margin-right: 5px;
+  background-color: #D7D7D7;
+  margin-left: 6px;
+  margin-right: 9px;
 }
 .bankInfo {
   display: flex;
@@ -1206,7 +1206,7 @@ button {
   color: #222222;
 }
 .bankName span:nth-child(2) {
-  margin-left: 25px;
+  margin-left: 15px;
   font-family: PingFangSC-Medium;
   font-size: 15px;
   color: #222222;
