--- a/style/css/commonSFT.less
+++ b/style/css/commonSFT.less
@@ -1749,3 +1749,12 @@ button {
     font-family: 'PingFangSC-Medium';
     font-size: @font-15;
 }
+
+.showMoney_bot>input {
+    height: 45px;
+    line-height: 45px;
+    padding: 0;
+    padding-left: 12px;
+    font-size: 50px;
+    font-family: "PingFangSC-Regular";
+}
