--- a/style/css/commonSFT.css
+++ b/style/css/commonSFT.css
@@ -1551,3 +1551,11 @@ button {
   font-family: 'PingFangSC-Medium';
   font-size: 15px;
 }
+.showMoney_bot > input {
+  height: 45px;
+  line-height: 45px;
+  padding: 0;
+  padding-left: 12px;
+  font-size: 50px;
+  font-family: "PingFangSC-Regular";
+}
